--- a/english-puzzle/src/containers/Home/style.scss
+++ b/english-puzzle/src/containers/Home/style.scss
@@ -1,4 +1,5 @@
 .home {
     background-image: url(../../img/startBackground.jpg);
-    height: 100%;
+    text-align: center;
+    height: 800px;
 }
